--- a/3/DirectAgents.Web/CakeExtractor.SqlScriptRunner/App.config
+++ b/3/DirectAgents.Web/CakeExtractor.SqlScriptRunner/App.config
@@ -6,9 +6,14 @@
   </configSections>
   
   <connectionStrings>
-    <add name="DataBaseConnectionString" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0208;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DataBaseConnectionString" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
+  <appSettings>
+    <add key="SqlScriptsFolderPath" value="./SQL/" />
+  </appSettings>
+  
+  
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
       <add name="Event Log Listener" formatter="Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="Enterprise Library Logging" log="Application" machineName="." traceOutputOptions="None" />
