Fixed build. Added ef-extensions license information.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -53,6 +53,10 @@
     </specialSources>
   </loggingConfiguration>
   <appSettings>
+    <!-- Entity Framework Extensions License Settings-->
+    <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents"/>
+    <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380"/>
+    
     <!--<add key="PortalEmail" value="portal@directagent.com"/>-->
 
     <!--Amazon Advertising Access - START-->
