--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -41,6 +41,11 @@
       </errors>
     </specialSources>
   </loggingConfiguration>
+  <appSettings>
+    <!-- Entity Framework Extensions License Settings-->
+    <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents"/>
+    <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380"/>
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
