--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -38,6 +38,10 @@
     </providers>
   </entityFramework>
   <appSettings>
+    <!-- Entity Framework Extensions License Settings-->
+    <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents"/>
+    <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380"/>
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
