Analytical tables sync (#65)
* Added draft sql runner tool.

* Implementation of sql script executer console application.

* Fixed relative folders path.

* Fixed build errors

* Finished script executor command

* Run sync process for ams asin after job execution.

* Removed comments in sql.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -228,6 +228,10 @@
     <add key="AmazonDspAwsAccessReportName" value="DA_AllData_Daily_Last30Days" />
 
     <add key="TD_SiteStats_ImpressionThreshold" value="100" /><!-- min # of impressions (n/a if conversions>0) -->
+
+    <!--Syncher sql scripts configuration -->
+    <add key="AmazonAmsAsinSyncScriptPath" value="./SQL/AMS/SyncAsinAnalyticTable.sql" />
+    
   </appSettings>
   <system.serviceModel>
     <bindings>
