--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -8,7 +8,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalProgContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0208;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
@@ -44,6 +44,9 @@
     <!-- Entity Framework Extensions License Settings-->
     <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents"/>
     <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380"/>
+
+    <!--Syncher sql scripts configuration -->
+    <add key="VcdSyncScriptPath" value="./SQL/VCD/SyncVcdAnalyticTable.sql" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
