--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
@@ -179,6 +179,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="SeleniumExtractors\PDA\AmazonReportCsvExtractors\AmazonReportCsvExtractor.cs" />
+    <Compile Include="Synchers\VcdAnalyticTablesSyncher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -214,8 +215,14 @@
       <Name>CakeExtracter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="SQL\VCD\" />
+    <Content Include="SQL\VCD\CreateVcdAnalyticTable.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SQL\VCD\SyncVcdAnalyticTable.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets')" />
