--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -8,7 +8,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ClientPortalProgContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0208;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
