Vcd multiaccounting and analytical tables. (#67)
* Execution profiles for selenium jobs.

* Remove password value from source control.

* Define account ids for multiple profiles.

* Fixed logging formatting issue.

* Added entry points for vcd data syncing.

* Sync analytical tables with normal tables for vcd data.

* Added coments to SqlScriptsExecutor service.

* Leave empty db connection string.

* Added scripts for sync all accounts to analytic tables. Added ordered revenue to vcd analytic tables.

--- a/3/CakeExtracter.ConsoleApplication/CakeExtracter.ConsoleApplication.csproj
+++ b/3/CakeExtracter.ConsoleApplication/CakeExtracter.ConsoleApplication.csproj
@@ -178,13 +178,10 @@
     <Content Include="SQL\AMS\CreateAsinAnalyticTable.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="SQL\AMS\SyncAsinAnalyticTableAllAccounts.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="SQL\AMS\SyncAsinAnalyticTable.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SQL\VCD\CreateVcdAnalyticTable.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SQL\VCD\SyncVcdAnalyticTable.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
