--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -4,12 +4,11 @@
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="CakeExtractor.SeleniumApplication.Properties.PdaSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="CakeExtractor.SeleniumApplication.Properties.VcdSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="CakeExtractor.SeleniumApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
@@ -45,6 +44,9 @@
     <!-- Entity Framework Extensions License Settings-->
     <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents"/>
     <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380"/>
+
+    <!--Syncher sql scripts configuration -->
+    <add key="VcdSyncScriptPath" value="./SQL/VCD/SyncVcdAnalyticTable.sql" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -88,35 +90,6 @@
         <value>True</value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.PdaSettings>
-    <CakeExtractor.SeleniumApplication.Properties.VcdSettings>
-      <setting name="AccountId" serializeAs="String">
-        <value>0</value>
-      </setting>
-      <setting name="CookiesDirectory" serializeAs="String">
-        <value>VcdCookies</value>
-      </setting>
-      <setting name="StartDate" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="EndDate" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="DaysInterval" serializeAs="String">
-        <value>2, 60</value>
-      </setting>
-      <setting name="ReportDownloadingStartedDelayInSeconds" serializeAs="String">
-        <value>10</value>
-      </setting>
-      <setting name="MinDelayBetweenReportDownloadingInSeconds" serializeAs="String">
-        <value>30</value>
-      </setting>
-      <setting name="ReportDownloadingAttemptCount" serializeAs="String">
-        <value>10</value>
-      </setting>
-      <setting name="MaxDelayBetweenReportDownloadingInSeconds" serializeAs="String">
-        <value>100</value>
-      </setting>
-    </CakeExtractor.SeleniumApplication.Properties.VcdSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
       <setting name="SignInPageUrl" serializeAs="String">
         <value>https://advertising.amazon.com/sign-in</value>
