Initial stuff for Kochava job.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CakeExtractor.SeleniumApplication.Properties.CochavaSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="CakeExtractor.SeleniumApplication.Properties.PdaSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="CakeExtractor.SeleniumApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
@@ -52,6 +53,14 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <userSettings>
+    <CakeExtractor.SeleniumApplication.Properties.CochavaSettings>
+      <setting name="UserLoginName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UserPassword" serializeAs="String">
+        <value />
+      </setting>
+    </CakeExtractor.SeleniumApplication.Properties.CochavaSettings>
     <CakeExtractor.SeleniumApplication.Properties.PdaSettings>
       <setting name="CampaignsPageUrl" serializeAs="String">
         <value>https://advertising.amazon.com/cm/campaigns</value>
