--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -215,6 +215,8 @@
     <add key="AdformClientSecret_Alt1" value="s4WManLlRkkXbjWPv_YUPGnd0bv-gFha9JScGDVV" />
     <add key="AdformBaseUrl" value="https://api.adform.com" />
     <add key="Adform_OrderInsteadOfCampaign" value="43981" /><!--Bevel (Walker & Company)-->
+    <add key="Adform_AccountsWithSpecificTracking" value="43981" /><!--Bevel (Walker & Company)-->
+    <add key="Adform_AccountsTrackingIds" value="103625" /><!--Bevel Conversions ALL-->
 
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
     <!-- the job expects the certificate at this path. -->
