--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -147,6 +147,8 @@
     <add key="AdformClientSecret_Alt1" value="s4WManLlRkkXbjWPv_YUPGnd0bv-gFha9JScGDVV" />
     <add key="AdformBaseUrl" value="https://api.adform.com" />
     <add key="Adform_OrderInsteadOfCampaign" value="43981" /><!--Bevel (Walker & Company)-->
+    <add key="Adform_AccountsWithSpecificTracking" value="43981" /><!--Bevel (Walker & Company)-->
+    <add key="Adform_AccountsTrackingIds" value="103625" /><!--Bevel Conversions ALL-->
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
     <add key="AppleP12Location" value="C:\Certificates\AppleCertificate{0}.p12" />
     <!--<add key="AppleP12Location" value="d:\home\DA\portal\API\AppleCertificate{0}.p12" />--><!-- azure -->
