--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -429,6 +429,7 @@
     </Compile>
     <Compile Include="Common\Compare.cs" />
     <Compile Include="Common\SqlScriptsExecutor.cs" />
+    <Compile Include="Common\StorageCollection.cs" />
     <Compile Include="Common\TextUtils.cs" />
     <Compile Include="Etl\CakeMarketing\DALoaders\DAAffiliatesLoader.cs" />
     <Compile Include="Etl\CakeMarketing\DALoaders\DAAffSubSummaryLoader.cs" />
@@ -518,7 +519,8 @@
     <Compile Include="Etl\TradingDesk\Extracters\YAMExtracters.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\Adders\DailySummaryAdder.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\Adders\SummaryMetricAdder.cs" />
-    <Compile Include="Etl\TradingDesk\LoadersDA\AdformCampaignSummaryLoader.cs" />
+    <Compile Include="Etl\TradingDesk\LoadersDA\AdformLoaders\AdformCampaignSummaryLoader.cs" />
+    <Compile Include="Etl\TradingDesk\LoadersDA\AdformLoaders\AdformLineItemSummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\AdRollAdLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\AdrollAttributionSummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\AdrollSiteStatsLoader.cs" />
@@ -747,7 +749,6 @@
       <DependentUpon>SearchReportRuntimeTextTemplate.tt</DependentUpon>
     </Compile>
     <Compile Include="Reports\SimpleReportManager.cs" />
-    <Compile Include="SimpleRepositories\AdformStrategyRepository.cs" />
     <Compile Include="SimpleRepositories\Interfaces\ISimpleRepository.cs" />
     <Compile Include="SimpleRepositories\StrategyRepository.cs" />
     <Compile Include="SimpleRepositories\TypeRepository.cs" />
