--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -69,6 +69,7 @@
     <add key="AmazonWaitTimeSeconds" value="5" />
     <add key="AmazonWaitAttemptsNumber" value="33" />
     <add key="AmazonUnauthorizedAttemptsNumber" value="3" />
+    <add key="AmazonReportGenerationAttemptsNumber" value="5" />
     <add key="AmazonFailedRequestAttemptsNumber" value="10" />
     <add key="AmazonAuthCode" value="ANnhMugiYCuDlSyoEKdJ" />
     <add key="AmazonRefreshToken" value="" />
@@ -79,6 +80,7 @@
     <add key="AmazonAuthCode_Alt2" value="ANKGDfqneQdjIVLXeaKj" />
     <add key="Amazon_Alt3" value="3335990284144083" />
     <add key="AmazonAuthCode_Alt3" value="ANrGlRedanwLmwrxmdCY" />
+    <add key="AmazonAmsAsinSyncScriptPath" value="./SQL/AMS/SyncAsinAnalyticTable.sql" />
     <add key="AdWordsReportFilePath" value="C:\Reports\Adwords\adwordsrep.xml" />
     <add key="BingCustomerID" value="234647" />
     <add key="BingApiToken" value="006XNV7E81834904" />
