Add the first version of the CJ command with partial data extraction from the API.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -234,6 +234,8 @@
     <!--Syncher sql scripts configuration -->
     <add key="AmazonAmsAsinSyncScriptPath" value="./SQL/AMS/SyncAsinAnalyticTable.sql" />
     
+    <add key="CJAccessToken" value="691f057rqj19eha9ph7xh8fsyp" /> <!--DA ETL Commision Junction Token (lburgor)-->
+
   </appSettings>
   <system.serviceModel>
     <bindings>
