--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -405,6 +405,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Commands\DA\DASynchCampSums.cs" />
+    <Compile Include="Commands\DA\DaSynchCommissionJunctionStats.cs" />
     <Compile Include="Commands\DA\DASynchCriteoStats.cs" />
     <Compile Include="Commands\DA\DASynchDBMStats2.cs" />
     <Compile Include="Commands\DA\DASynchYAMStats.cs" />
@@ -499,6 +500,7 @@
     <Compile Include="Etl\TradingDesk\Extracters\AdRollAdExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdrollSiteStatsCsvExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\CPCExtracter.cs" />
+    <Compile Include="Etl\TradingDesk\Extracters\CommissionJunctionExtractors\CommissionJunctionAdvertiserExtractor.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\CriteoExtracters.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\DatabaseStrategyToDailySummaryExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\DbmCreativeCloudStorageExtracter.cs" />
@@ -673,6 +675,7 @@
     <Compile Include="Etl\TradingDesk\LoadersDA\AmazonLoaders\AmazonSummaryMetricLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\AmazonLoaders\AnalyticTablesSync\AmazonAmsAnalyticSyncher.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\AmazonLoaders\BaseAmazonLevelLoader.cs" />
+    <Compile Include="Etl\TradingDesk\LoadersDA\CommissionJunctionLoaders\CommissionJunctionAdvertiserLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\DbmConvLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\Interfaces\IDailySummaryLoader.cs" />
     <Compile Include="Etl\TradingDesk\LoadersDA\Interfaces\ISummaryMetricLoader.cs" />
@@ -853,6 +856,10 @@
     <ProjectReference Include="..\..\DirectAgents.Web\CakeExtractor.SqlScriptsExecution.Core\CakeExtractor.SqlScriptsExecution.Core.csproj">
       <Project>{32405edf-7257-4a90-89fa-148eac75e183}</Project>
       <Name>CakeExtractor.SqlScriptsExecution.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\DirectAgents.Web\CommissionJunction\CommissionJunction.csproj">
+      <Project>{0038b6b4-357a-4721-99bc-7659ad00dd3a}</Project>
+      <Name>CommissionJunction</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
