Added db entities and migration.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -170,6 +170,8 @@
     <Compile Include="Entities\Cake\Role.cs" />
     <Compile Include="Entities\Cake\Vertical.cs" />
     <Compile Include="Entities\CPProg\Actions.cs" />
+    <Compile Include="Entities\CPProg\CJ\CjAdvertiserCommission.cs" />
+    <Compile Include="Entities\CPProg\CJ\CjAdvertiserCommissionItem.cs" />
     <Compile Include="Entities\CPProg\DSP\DspAdvertiser.cs" />
     <Compile Include="Entities\CPProg\DSP\DspDbEntity.cs" />
     <Compile Include="Entities\CPProg\DSP\DspCreative.cs" />
@@ -629,6 +631,10 @@
     <Compile Include="MigrationsTD\201901311354011_Mig_DspDataTables2.Designer.cs">
       <DependentUpon>201901311354011_Mig_DspDataTables2.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201903131134537_Mig_CjDataTables.cs" />
+    <Compile Include="MigrationsTD\201903131134537_Mig_CjDataTables.Designer.cs">
+      <DependentUpon>201903131134537_Mig_CjDataTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -1006,6 +1012,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201901311354011_Mig_DspDataTables2.resx">
       <DependentUpon>201901311354011_Mig_DspDataTables2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201903131134537_Mig_CjDataTables.resx">
+      <DependentUpon>201903131134537_Mig_CjDataTables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
