Correct response models for proper JSON deserialization, update the extractor and the loader to use a database entity, update CJ utility to read some properties from the configuration.

--- a/3/DirectAgents.Web/CommissionJunction/CommissionJunction.csproj
+++ b/3/DirectAgents.Web/CommissionJunction/CommissionJunction.csproj
@@ -57,11 +57,11 @@
     <Compile Include="Utilities\CjLogger.cs" />
     <Compile Include="Utilities\CjQueries.cs" />
     <Compile Include="Utilities\CjUtility.cs" />
-    <Compile Include="Entities\ResponseEntities\AdvertiserCommission.cs" />
+    <Compile Include="Entities\AdvertiserCommission.cs" />
     <Compile Include="Entities\ResponseEntities\CjQueryResponse.cs" />
-    <Compile Include="Entities\ResponseEntities\AdvertiserVerticalAttributes.cs" />
+    <Compile Include="Entities\AdvertiserVerticalAttributes.cs" />
     <Compile Include="Entities\ResponseEntities\CjResponse.cs" />
-    <Compile Include="Entities\ResponseEntities\Item.cs" />
+    <Compile Include="Entities\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
