--- a/3/DirectAgents.Web/CommissionJunction/CommissionJunction.csproj
+++ b/3/DirectAgents.Web/CommissionJunction/CommissionJunction.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Entities\RequestEntities\CjRequestParams.cs" />
     <Compile Include="Entities\ResponseEntities\CjAdvertiserCommissionsResponse.cs" />
+    <Compile Include="Exceptions\SkippedCommissionsException.cs" />
     <Compile Include="Utilities\CjLogger.cs" />
     <Compile Include="Utilities\CjQueries.cs" />
     <Compile Include="Utilities\CjUtility.cs" />
