Change the logic for extracting commissions: get all elements for a date range and only after that delete old elements from the database, add parallel logic for API requests.

--- a/3/DirectAgents.Web/CommissionJunction/CommissionJunction.csproj
+++ b/3/DirectAgents.Web/CommissionJunction/CommissionJunction.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\QueryParams\AdvertiserCommissionQueryParams.cs" />
+    <Compile Include="Entities\QueryParams\BaseQueryParams.cs" />
     <Compile Include="Entities\RequestEntities\CjRequestParams.cs" />
     <Compile Include="Entities\ResponseEntities\CjAdvertiserCommissionsResponse.cs" />
     <Compile Include="Enums\DateRangeType.cs" />
