--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -407,6 +407,7 @@
     <Compile Include="Commands\DA\DASynchCampSums.cs" />
     <Compile Include="Commands\DA\DASynchCriteoStats.cs" />
     <Compile Include="Commands\DA\DASynchDBMStats2.cs" />
+    <Compile Include="Commands\DA\DASynchKochavaStats.cs" />
     <Compile Include="Commands\DA\DASynchYAMStats.cs" />
     <Compile Include="Commands\EOMSynchCPCCommand.cs" />
     <Compile Include="Commands\DA\DASynchFacebookAdPreviews.cs" />
@@ -447,7 +448,7 @@
     <Compile Include="Etl\CakeMarketing\Extracters\SubIdSummariesExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\CPCLoader.cs" />
     <Compile Include="Etl\DSP\Configuration\AmazonDspConfigurationProvider.cs" />
-    <Compile Include="Etl\DSP\Configuration\AmazonDspAccountsProvider.cs" />
+    <Compile Include="Etl\CommandsExecutionAccountsProvider.cs" />
     <Compile Include="Etl\DSP\Extractors\AmazonDspExtractor.cs" />
     <Compile Include="Etl\DSP\Extractors\Composer\DspReportDataComposer.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\DspReportCsvParser.cs" />
@@ -461,13 +462,18 @@
     <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\DspItemMetricManager.cs" />
     <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\LineItemsDataLoader.cs" />
     <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\OrdersDataLoader.cs" />
-    <Compile Include="Etl\DSP\Models\AmazonDspAccauntDailyReportData.cs" />
+    <Compile Include="Etl\DSP\Models\AmazonDspAccountDailyReportData.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportAdvertiser.cs" />
     <Compile Include="Etl\DSP\Models\AmazonDspDailyReportData.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportCreative.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportLineItem.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\DspReportEntity.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportOrder.cs" />
+    <Compile Include="Etl\Kochava\Configuration\KochavaAccountsProvider.cs" />
+    <Compile Include="Etl\Kochava\Configuration\KochavaConfigurationProvider.cs" />
+    <Compile Include="Etl\Kochava\Extractors\KochavaExtractor.cs" />
+    <Compile Include="Etl\Kochava\Loaders\KochavaLoader.cs" />
+    <Compile Include="Etl\Kochava\Models\KochavaReportData.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\AppleApiExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingExtractors\BingConvSummaryExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingExtractors\BingDailyNonShoppingSummaryExtractor.cs" />
