--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -229,6 +229,12 @@
     <add key="AmazonDspAwsAccessSecret" value="PHl0X+lllyKLbUuizVmIVolTk7QRGRKJt4JuOAoD" />
     <add key="AmazonDspAwsAccessReportName" value="DA_AllData_Daily_Last30Days" />
 
+    <!-- Kochava Job Configuration -->
+    <add key="KochavaAwsAccessKey" value="AKIAJHIORW7TJGO2FZRQ" />
+    <add key="KochavaAwsAccessSecret" value="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" />
+    <add key="KochavaAwsBucketName" value="dakochavareportspublic" />
+    <add key="KochavaReportPeriod" value="10" />
+    
     <add key="TD_SiteStats_ImpressionThreshold" value="100" /><!-- min # of impressions (n/a if conversions>0) -->
 
     <!--Syncher sql scripts configuration -->
