--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -232,10 +232,10 @@
     <!--Commission Junction Configuration-->
     <add key="CJAccessToken" value="691f057rqj19eha9ph7xh8fsyp" /> <!--DA ETL Commision Junction Token (lburgor)-->
     <add key="CJLockingDateRangeAccountsExternalIds" value="" />
-    <add key="CJPostingDateRangeAccountsExternalIds" value="4465405" /> <!--Carhartt-->
+    <add key="CJPostingDateRangeAccountsExternalIds" value="" /> <!--Carhartt-->
     <add key="CJRequestTimeoutInMilliseconds" value="600000" /> <!--10 min = 1000 ms * 60 s * 10 min-->
     <add key="CJWaitTimeInSeconds" value="20" />
-    <add key="CJWaitAttemptsNumber" value="30" />
+    <add key="CJWaitAttemptsNumber" value="100" />
 
   </appSettings>
   <system.serviceModel>
